--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@babel/core": "^7.18.2",
+        "@babel/preset-env": "^7.18.2",
         "axios": "^0.19",
+        "babel-loader": "^8.2.5",
         "bootstrap": "^5.1.3",
         "cross-env": "^7.0",
         "jquery": "^3.2",
